--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>ぼっちちゃん召喚</title>
     <script src="https://cdn.jsdelivr.net/npm/tsparticles@2/tsparticles.bundle.min.js"></script>
     <script type="module" src="/src/particles.js"></script>
-    <script type="module" src="/src/bocchi_2.js"></script>
+    <script type="module" src="/src/bocchi_v2.js"></script>
     <!-- 外部CSSを読み込む -->
     <link rel="stylesheet" href="/src/style.css">
 </head>
